fix: `Cannot find module` error in vscode

--- a/packages/app-1/package.json
+++ b/packages/app-1/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.4.12"
+    "next": "^13.4.12",
+    "app-2": "workspace:*",
+    "shared": "workspace:*"
   }
 }
