--- a/packages/app-2/package.json
+++ b/packages/app-2/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.4.12"
+    "next": "^13.4.12",
+    "app-1": "workspace:*"
   }
 }
